Ajuste do Controller e da nomenclatura das imagens